<resources>
    <string name="app_name">RecetasDeComida</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Bookmark">Bookmark</string>
    <string name="Search">Search</string>
    <string name="Add_recipe">Add Recipe</string>
    <string name="Account">Account</string>
</resources>